# success_vcpkg_demo

./: CMakeLists.txt  README.md  compile.bat  gtest.cpp  main.cpp
sdk/win/vcpkg/installed/vcpkg/info/: jsoncpp_1.9.5_x86-windows.list
sdk/win/vcpkg/installed/x64-windows/debug/lib/: fmtd.lib
sdk/win/vcpkg/installed/x64-windows/lib/: fmt.lib
sdk/win/vcpkg/installed/x64-windows/share/fmt/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/win/vcpkg/installed/x64-windows/share/jsoncpp/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/win/vcpkg/installed/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/win/vcpkg/installed/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/win/vcpkg/installed/x86-windows/debug/lib/: fmtd.lib  jsoncpp.lib
sdk/win/vcpkg/installed/x86-windows/lib/: fmt.lib  jsoncpp.lib
sdk/win/vcpkg/installed/x86-windows/share/fmt/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/win/vcpkg/installed/x86-windows/share/jsoncpp/: vcpkg.spdx.json  vcpkg_abi_info.txt
